--- a/.github/workflows/check-commit.yml
+++ b/.github/workflows/check-commit.yml
@@ -22,9 +22,18 @@ jobs:
           - 5432:5432
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
-    - uses: chrislennon/action-aws-cli@v1.1
+      - uses: actions/checkout@v2
+      - uses: chrislennon/action-aws-cli@v1.1
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '12'
+          check-latest: true
+
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
     - name: install dependencies
       run: yarn
     - name: lint
