--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - enqueue-traces
 
 jobs:
   dev-deploy:
@@ -23,6 +24,11 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+      rabbitmq:
+        image: rabbitmq:3-management-alpine
+        ports:
+          - 5672:5672
+          - 15672:15672
 
     steps:
       - uses: actions/checkout@v2
