feat(tracing): enqueue traces WIP (#11)
* feat(tracing): enqueue traces WIP

* feat(tracing): enqueue traces WIP

* feat(tracing): enqueue traces WIP

* feat(tracing): enqueue traces WIP

* feat(tracing): enqueue traces WIP

* feat(tracing): enqueue traces WIP

--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -23,6 +23,11 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+      rabbitmq:
+        image: rabbitmq:3-management-alpine
+        ports:
+          - 5672:5672
+          - 15672:15672
 
     steps:
       - uses: actions/checkout@v2
