--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest --runInBand --detectOpenHandles",
+    "test": "jest --runInBand --detectOpenHandles --forceExit",
     "build:prod": "webpack -p --progress --colors --config webpack.config.prod.js --bail",
     "dev": "webpack --config webpack.config.js",
     "start": "nodemon dist/index.js",
     "tsc": "tsc --noEmit",
-    "test:func": "jest func --runInBand --detectOpenHandles",
+    "test:func": "jest func --runInBand --detectOpenHandles --forceExit",
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/amqplib": "^0.5.16",
     "@types/console-log-level": "^1.4.0",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.11.0",
@@ -49,6 +50,7 @@
   "dependencies": {
     "@slack/client": "^5.0.2",
     "@supercharge/promise-pool": "^1.3.0",
+    "amqplib": "^0.6.0",
     "apollo-server-express": "^2.17.0",
     "aws-sdk": "^2.752.0",
     "body-parser": "^1.19.0",
@@ -61,6 +63,7 @@
     "luxon": "^1.25.0",
     "node-cache": "^5.1.2",
     "pg": "^8.3.2",
+    "rabbit-queue": "^5.0.1",
     "serialize-error": "^7.0.1",
     "serverless-express": "^2.0.11",
     "typeorm": "^0.2.28"
